--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "run.js",
   "scripts": {
+    "preview": "live-server dist/",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --config webpack.config.js --mode=production",
     "watch": "webpack --config webpack.config.js --watch --mode=development"
